--- a/server/extra/.library.html
+++ b/server/extra/.library.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.12/dist/js/uikit-icons.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.4.0/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/joi@17.9.2/dist/joi-browser.min.js"></script>
 </head>
 <body>
 </body>
