json formatter page

--- a/server/extra/.library.html
+++ b/server/extra/.library.html
@@ -9,6 +9,8 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.4.0/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/joi@17.9.2/dist/joi-browser.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/json-formatter/0.7.0/json-formatter.min.css"/>
+    <script src="https://azimi.me/json-formatter-js/dist/json-formatter.umd.js"></script>
 </head>
 <body>
 </body>
